Refactored ProfilePanel to use fixed array. Refactored viewing selected profile method in ProfilesPanel and deleting selected exercise method in ExercisesPanel.